--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -23,11 +23,15 @@
     font-size: 20px;
     font-weight: bold;
     color: white;
+    cursor: pointer;
 }
 
 /* main style */
 header {
     background-color: #FFF8F3;
+    background: url(../images/developer.png) , url("../images/header_bg.png") ,#FFF8F3;
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
     padding-top: 50px;
 }
 nav{
@@ -52,3 +56,42 @@ nav .menu a {
 }
 
 
+#banner{
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 46px 36px 0px 232px;
+    
+}
+#banner .banner-content {
+    max-width: 585px;
+}
+
+#banner .banner-content h2 {
+    font-size: 45px;
+    font-weight: 600px;
+    color: #474747;
+    margin-bottom: 5px;
+}
+
+#banner .banner-content h1 {
+    font-size: 85px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 5px;
+    margin-bottom: 20px;
+
+}
+#banner .banner-content p {
+    font-size: 18px;
+    color: #757575;
+    line-height: 30px;
+    margin-bottom: 30px;
+
+}
+
+#banner .banner-image img{
+    max-width: 585px;
+    vertical-align: middle;
+}
