--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -29,6 +29,8 @@
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
+
 }
 .section-heading h2 {
     font-size: 35px;
@@ -138,4 +140,38 @@ nav .menu a {
 .about-info .info-card h4 {
     font-size: 20px;
     color: #474747;
+}
+
+#skills {
+    padding-top: 130px;
+}
+#skills .skills-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+#skills .skills-container .skill-box{
+    display: flex;
+    gap: 24px;
+}
+.skill-box .skill-card{
+    padding: 30px;
+    /* border: 1px solid red; */
+    box-shadow: 0 6px 50px 0 #00000027;
+    max-width: 267px;
+}
+.skill-card img{
+    max-width: 44px;
+    margin-bottom: 30px;
+}
+.skill-card h3 {
+    font-size: 20px;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.skill-card p {
+    font-size: 16px;
+    color: #757575;
+    line-height: 28px;
 }
