--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -46,7 +46,11 @@
     margin-top: 50px;
 }
 
-
+.container {
+    width: 71%;
+    max-width: 1140px;
+    margin: 0px auto;
+}
 
 /* main style */
 header {
@@ -57,10 +61,7 @@ header {
     padding-top: 50px;
 }
 nav{
-    width: 71%;
-    max-width: 1140px;
-    /* border: 1px solid red; */
-    margin: 0px auto;
+     /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -123,9 +124,6 @@ nav .menu a {
 
 }
 #about .about-container {
-    width: 71%;
-    max-width: 1140px;
-    margin: 0 auto;
     text-align: center;
     background-color: #FFF8F3;
     padding: 131px 156px;
@@ -144,13 +142,6 @@ nav .menu a {
 .about-info .info-card h4 {
     font-size: 20px;
     color: #474747;
-}
-
-
-#skills .skills-container{
-    width: 71%;
-    max-width: 1140px;
-    margin: 0 auto;
 }
 
 #skills .skills-container .skill-box{
@@ -179,9 +170,7 @@ nav .menu a {
 }
 
  #resume .resume-contaier{
-    width: 71%;
-    max-width: 1140px;
-    margin: 113px auto 0;
+    margin-top: 113px;
     display: flex;
     gap: 24px;
 }
